# abra

./: .env.example  .gitignore  ARCHITECTURE.md  EXPERIMENTS.md  Makefile  NOTES.md  README.md  pyproject.toml  vocab.toml
abra/engine/: core.py  dictionary.py  serve.py  store.py  stt.py
abra/shell/: main.py
experiments/01-e2e-python/: README.md
scripts/: release.sh
shells/mac/: Entitlements.plist  Package.swift  README.md
shells/mac/Sources/AbraShell/: Info.plist  main.swift
shells/mac/icon/: AppIcon.icns  gen_icon.py  gen_tones.py
